pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/library/export-body.ub
greeting: resource {
  locals: {
    cfg: {
      path: '/tmp/one'
      path: '/tmp/two'
    }
  }
}
